# AmaMorphflow

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
scripts/: download_weights.py  lmks2vid.py  pose2vid.py  verify_weights.py
src/utils/: util.py
